v1.4.0: RT audio
